--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,14 +2,11 @@ name: Deploy React App
 on:
   push:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: inventory
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,17 +15,21 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: npm
+          cache-dependency-path: inventory/package-lock.json
 
       - name: Install dependencies
         run: npm ci
+        working-directory: inventory
 
       - name: Build project
         run: npm run build
+        working-directory: inventory
 
       - name: Upload build artifacts
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./inventory/dist
+          path: inventory/dist
           # Wenn du Create React App benutzt:
           # path: ./build
 
