--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: inventory
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,13 +21,19 @@ jobs:
           cache: npm
           cache-dependency-path: inventory/package-lock.json
 
+      - name: Show workspace layout
+        run: |
+          pwd
+          ls -la
+          ls -la inventory
+          ls -la package-lock.json || true
+          ls -la inventory/package-lock.json || true
+
       - name: Install dependencies
         run: npm ci
-        working-directory: inventory
 
       - name: Build project
         run: npm run build
-        working-directory: inventory
 
       - name: Upload build artifacts
         uses: actions/upload-pages-artifact@v3
