--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,9 +7,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: inventory
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -31,9 +28,11 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./inventory
 
       - name: Build project
         run: npm run build
+        working-directory: ./inventory
 
       - name: Upload build artifacts
         uses: actions/upload-pages-artifact@v3
