--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,17 +22,18 @@ jobs:
         run: |
           pwd
           ls -la
-          ls -la inventory
+          ls -la .. || true
+          ls -la inventory || true
+          ls -la ../inventory || true
           ls -la package-lock.json || true
           ls -la inventory/package-lock.json || true
+          ls -la ../inventory/package-lock.json || true
 
       - name: Install dependencies
-        run: npm ci
-        working-directory: ./inventory
+        run: npm ci --prefix inventory
 
       - name: Build project
-        run: npm run build
-        working-directory: ./inventory
+        run: npm run build --prefix inventory
 
       - name: Upload build artifacts
         uses: actions/upload-pages-artifact@v3
